# MyLibrary

./: .dockerignore  .env  .env.example  .env.test  API_QUICK_REFERENCE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SWAGGER.md  diesel.toml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/: DOCUMENTATION_INDEX.md  README.md  STYLE_GUIDE.md
docs/design/api/: api-endpoints.md
docs/design/database/: database-design.md  数据库设计文档.md
docs/development/: BACKEND_ISSUES.md  backend-development-plan.md  frontend-development-plan.md  technical-specifications.md
docs/development/coding-standards/: api-development-guide.md
docs/project-management/planning/: phase-2-planning.md
docs/project-management/progress/: 2025-06-24-progress-report.md  (+4 more)
docs/requirements/: system-requirements.md  个人读书记录系统需求文档.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
migrations/2025-06-22-000001_create_tables/: down.sql  up.sql
release/: .env.example  README.md  docker-compose.yml  start.sh  stop.sh
src/: lib.rs  main.rs
src/config/: settings.rs
src/db/: connection.rs  mod.rs  schema.rs
src/errors/: mod.rs
src/handlers/: books.rs  categories.rs  mod.rs  notes.rs  tags.rs
src/middleware/: mod.rs
src/models/: book.rs  category.rs  mod.rs  note.rs  reading_status.rs  tag.rs
src/utils/: mod.rs  pagination.rs
tests/: book_api_test.rs  database_test.rs  error_handling_test.rs  integration_test.rs  note_api_test.rs  note_tag_association_test.rs  swagger_test.rs  tag_api_test.rs
tests/common/: mod.rs
(+17 files in other folders)
