[package]
name = "reading-notes-backend"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Personal reading notes management system backend"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"
actix-rt = "2.10"
actix-files = "0.6"

# Database
diesel = { version = "2.2", features = ["postgres", "chrono", "r2d2", "numeric"] }
diesel_migrations = "2.2"
r2d2 = "0.8"
bigdecimal = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenv = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID for unique identifiers
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }

# OpenAPI/Swagger documentation
utoipa = { version = "4.2", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }

[dev-dependencies]
actix-rt = "2.10"
tokio-test = "0.4"
diesel_migrations = "2.2"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }